--- a/pom.xml
+++ b/pom.xml
@@ -166,6 +166,13 @@
       <artifactId>commons-lang3</artifactId>
       <version>3.5</version>
     </dependency>
+
+    <!-- send email -->
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-email</artifactId>
+      <version>1.4</version>
+    </dependency>
   </dependencies>
 
   <build>
