--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID" version="2.5">
   <display-name>Archetype Created Web Application</display-name>
-  
+
   <!-- 监听上下文 -->
   <listener>
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
@@ -12,7 +12,7 @@
     <param-name>contextConfigLocation</param-name>
     <param-value>classpath:applicationContext.xml</param-value>
   </context-param>
-  
+
   <!-- spring mvc 配置-->
   <servlet>
     <servlet-name>spring</servlet-name>
@@ -40,25 +40,25 @@
     <filter-name>encodingFilter</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
-  
+
   <!-- druid 让监听生效 -->
-<servlet>
-  <servlet-name>DruidStatServlet</servlet-name>
-  <servlet-class>com.alibaba.druid.support.http.StatViewServlet</servlet-class>
-  <init-param>
-    <param-name>loginUsername</param-name>
-    <param-value>druid</param-value>
-  </init-param>
-  <init-param>
-    <param-name>loginPassword</param-name>
-    <param-value>druid</param-value>
-  </init-param>
-</servlet>
+  <servlet>
+    <servlet-name>DruidStatServlet</servlet-name>
+    <servlet-class>com.alibaba.druid.support.http.StatViewServlet</servlet-class>
+    <init-param>
+      <param-name>loginUsername</param-name>
+      <param-value>druid</param-value>
+    </init-param>
+    <init-param>
+      <param-name>loginPassword</param-name>
+      <param-value>druid</param-value>
+    </init-param>
+  </servlet>
   <servlet-mapping>
     <servlet-name>DruidStatServlet</servlet-name>
     <url-pattern>/sys/druid/*</url-pattern>
   </servlet-mapping>
-  
+
   <filter>
     <filter-name>DruidWebStatFilter</filter-name>
     <filter-class>com.alibaba.druid.support.http.WebStatFilter</filter-class>
@@ -81,6 +81,24 @@
     <url-pattern>/sys/*</url-pattern>
     <url-pattern>/admin/*</url-pattern>
   </filter-mapping>
+    <filter>
+        <filter-name>aclControlFilter</filter-name>
+        <filter-class>com.mmall.filter.AclControllerFilter</filter-class>
+        <init-param>
+            <param-name>targetFilterLifecycle</param-name>
+            <param-value>true</param-value>
+        </init-param>
+        <init-param>
+            <param-name>exclusionUrls</param-name>
+            <param-value>/sys/user/noAuth.page,/login.page</param-value>
+        </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>aclControlFilter</filter-name>
+        <url-pattern>/sys/*</url-pattern>
+        <url-pattern>/admin/*</url-pattern>
+    </filter-mapping>
+
   <!-- 默认访问页面-->
   <welcome-file-list>
     <welcome-file>index.jsp</welcome-file>
